--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-http-backend": "^2.5.2",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
